--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[32,)"
+loaderVersion="[32,36)"
 license="All rights reserved"
 
 [[mods]]
@@ -14,12 +14,12 @@ Just a collection of furniture.
 [[dependencies.furnitureexpanded]] #optional
     modId="forge"
     mandatory=true
-    versionRange="[32,)"
+    versionRange="[32,36)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.furnitureexpanded]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16,1.17)"
+    versionRange="[1.16,1.16.5)"
     ordering="NONE"
     side="BOTH"
