--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,10 +1,10 @@
 modLoader="javafml"
-loaderVersion="[32,36)"
+loaderVersion="[40,)"
 license="All rights reserved"
 
 [[mods]]
 modId="furnitureexpanded"
-version="1.16-1.0.0" #${file.jarVersion}
+version="1.18-1.0.1" #${file.jarVersion}
 displayName="Furniture Expanded"
 logoFile="expanded.png"
 authors="clumsycat"
@@ -14,12 +14,12 @@ Just a collection of furniture.
 [[dependencies.furnitureexpanded]] #optional
     modId="forge"
     mandatory=true
-    versionRange="[32,36)"
+    versionRange="[40,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.furnitureexpanded]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16,1.16.5)"
+    versionRange="[1.18,1.19)"
     ordering="NONE"
     side="BOTH"
