- Baskets now function like bags (right click to open) - Baskets are now dyeable (just like leather armor) - Baskets now change according to how many items it has inside - New block added: Bathtub - New block added: Shower Head - Shower box model has been updated with a closing door - Shower box now has a valve if a shower head is present above - A few hitboxes and models light optimizations. - Renamed Shower Box to Shower Enclosure - Bathroom sink tap is no longer made out of wood, instead it uses gray concrete as a texture material. - Players no longer teleport back to their previous positions when getting up from a seat, instead they will be teleported to an adjacent position that is free. - Fixed crafting recipe for the toilet (1.19 branch)

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="All rights reserved"
 
 [[mods]]
 modId="furnitureexpanded"
-version="1.19-1.0.1" #${file.jarVersion}
+version="1.19-1.1"
 displayName="Furniture Expanded"
 logoFile="expanded.png"
 authors="clumsycat"
